--- a/Dota 2 Pro Players/Base.lproj/Main.storyboard
+++ b/Dota 2 Pro Players/Base.lproj/Main.storyboard
@@ -117,7 +117,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Pro Players" id="hq5-QV-7iU">
-                        <barButtonItem key="backBarButtonItem" title=" " id="bHF-jr-twX"/>
+                        <barButtonItem key="backBarButtonItem" title=" " id="og4-Qa-axv"/>
+                        <barButtonItem key="rightBarButtonItem" image="info_button" id="gtb-2Z-jgb">
+                            <connections>
+                                <action selector="showInfo:" destination="YbC-K8-ZY3" id="jWh-1m-5h8"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <segue destination="c34-ed-HqW" kind="show" identifier="toParticipants" id="Far-Jv-XQb"/>
@@ -233,7 +238,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="8CV-eE-OJW">
-                                            <rect key="frame" x="177.5" y="12" width="20" height="20"/>
+                                            <rect key="frame" x="177.5" y="50" width="20" height="20"/>
                                         </activityIndicatorView>
                                     </subviews>
                                     <constraints>
@@ -262,7 +267,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3qt-ED-Yhs" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Oiq-aN-Uc1">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" largeTitles="YES" id="Oiq-aN-Uc1">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -278,5 +283,6 @@
     </scenes>
     <resources>
         <image name="avatarPlaceholder" width="300" height="300"/>
+        <image name="info_button" width="60" height="60"/>
     </resources>
 </document>
